welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:27: error: value avance is not a member of Unit
avance()avance() 
        ^